# internal/domain/models/review.go
@@ -1,0 +1,18 @@
+package models
+
+type GetReview struct {
+	ID          int
+	Description string
+	PlayTime    int
+	PlayMinutes int
+	Rate        int
+	Game        Game
+}
+
+type AddReview struct {
+	GameID      int
+	Description string
+	PlayTime    int
+	PlayMinutes int
+	Rate        int
+}
